atualização no css

--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,9 @@
     </div>
     <section class="main">
       <form>
-        Senha atual: <br><input type="text" id="texto"/></br>
-        <br>Chave para ser utilizada: <br><input type="number" placeholder="Digite um número inteiro" id="code"/></br>
+        Senha atual: <br>
+        <br><input type="text" id="texto"/></br>
+        <br>Chave para ser utilizada: <br><input type="number" placeholder="Digite um número" id="code"/></br>
         <br>Escolha uma opção:</br>
         <p><button id="codifica">Codificar</button>
         <button id="decodifica">Decodificar</button></p>     
@@ -22,6 +23,7 @@
     <br>
     
     <div class="bottom">
+      Resultado:
       <p><output name="result" id="novaFrase"></output></p>
       <p><output name="voltaResult" id="voltaFrase"></output></p>
     </div>
