--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     </div>
     <section class="main">
       <form>
-        Senha atual: <br>
+        Senha: <br>
         <br><input type="text" id="texto"/></br>
         <br>Chave para ser utilizada: <br><input type="number" placeholder="Digite um número" id="code"/></br>
         <br>Escolha uma opção:</br>
